--- a/applications/dashboard/scss/_scaffold.scss
+++ b/applications/dashboard/scss/_scaffold.scss
@@ -65,7 +65,7 @@
     }
 
     > .padded,
-    .padded-top {
+    > .padded-top {
       margin-top: $spacer / 2;
     }
   }
